--- a/CouponAPI/appsettings.json
+++ b/CouponAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "CouponAPIConnectionString": "Server=localhost;Database=CouponAPI;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
